--- a/src/App.scss
+++ b/src/App.scss
@@ -6,7 +6,7 @@
   margin: 0;
   padding: 0;
   text-decoration: none;
-  scroll-margin-top: 5.5rem;
+  scroll-margin-top: var(--navbar-height, 5.5rem);
 }
 
 html, body {
